[gd_scene load_steps=5 format=3 uid="uid://b01gvly7st3r4"]

[ext_resource type="Script" path="res://Scenes/GameMenu/game_menu.gd" id="1_44qgd"]
[ext_resource type="Theme" uid="uid://bbt5up14ymi33" path="res://themes/buttonTheme.tres" id="1_c57di"]
[ext_resource type="Texture2D" uid="uid://c18qap43dhupd" path="res://assets/1.png" id="1_mjaw1"]

[sub_resource type="LabelSettings" id="LabelSettings_3bqac"]
font_size = 80

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_44qgd")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mjaw1")
stretch_mode = 5

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 225.0
offset_right = 704.0
offset_bottom = 289.0
theme = ExtResource("1_c57di")
text = "Jogar	"

[node name="ConfigButton" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 352.0
offset_right = 704.0
offset_bottom = 416.0
theme = ExtResource("1_c57di")
text = "Config"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 480.0
offset_right = 704.0
offset_bottom = 544.0
theme = ExtResource("1_c57di")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 192.0
grow_horizontal = 2
theme = ExtResource("1_c57di")
text = "NOME DO JOGO"
label_settings = SubResource("LabelSettings_3bqac")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ConfigButton" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
